--- a/retype.yml
+++ b/retype.yml
@@ -2,20 +2,20 @@ input: .
 output: .retype
 url: https://guide.gatitosworld.com/
 branding:
-  title: GW Guide
+  title: Guía Gatitos
   label: v3.3.59
 links:
 - text: Accede al servidor
   link: https://discord.com/invite/gatitos
   target: blank
 footer:
-  copyright: "&copy; Copyright {{ year }}. Todos los derechos reservados."
+  copyright: "&copy; {{ year }} Gatitos. Todos los derechos reservados."
 generator:
   directoryIndex:
     append: false
 locale: es
 meta:
-  title: " | GW Guide"
+  title: " | Guía Gatitos"
 search:
   hotkeys:
     - "s"
